--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <input type="hidden" name="_subject" value="Novo Contato!" />
               <input type="text" name="_honey" style="display: none;" />
               <input type="hidden" name="_captcha" value="false" />
-              <input type="hidden" name="_next" value="">
+              <input type="hidden" name="_next" value="https://projetowinmed.github.io/LpRondonopolis-MT/">
 
           </div>
 
