--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body>
   <nav id="menu2" class="navbar navbar-expand-lg   container-fluid fixed-top  "
-    style="background-color: #681209; color:white">
+    style="background-color: #da251d; color:white">
 
     <a id="efeitoHoverLink" class="nav-link" href="#mapa" style="color:#FFF;">
       <h4 class="bi bi-geo-alt">R. Barão do Rio Branco, 1067 - Ed. Pantanal, sala 03, Rondonópolis-MT</h4>
@@ -96,7 +96,7 @@
       style="width: 1423;height: 100vh;">
   </div>
 
-  <button id="botaoimg" class="btn  text-dark btn-sm" style="background-color:#681209;border-radius: 20px;"> <a
+  <button id="botaoimg" class="btn  text-dark btn-sm" style="background-color:#681209;border-radius: 20px;opacity:0.9;"> <a
       class="bi bi-whatsapp"
       href="https://api.whatsapp.com/send?phone=5566999720827&amp;text=Ol%C3%A1,%20vim%20do%20site,%20quero%20mais%20informa%C3%A7%C3%B5es%20sobre%20como%20agendar%20minha%20consulta."
       style="color:#FFF;  font-size: 15px;text-decoration: none;" target="_blank" aria-label="Numero-whats"> Fale com um
@@ -187,13 +187,13 @@
     </div>
   </section>
 
-  <section class="services section-padding" id="services" style="background-color:#681209;">
+  <section class="services section-padding" id="services" style="background-color:#da251d;">
     <div class="container">
 
       <div class="row">
         <div class="col-12 col-md-12 col-lg-8">
           <div class="card text-red text-center  border-0">
-            <div class="card-body " style="background-color: #681209;align-items: center;">
+            <div class="card-body " style="background-color: #da251d;align-items: center;">
 
               <h1 class="lead">AUDIBEL
                 <span>40</span> ANOS DEDICADOS À SAÚDE
@@ -254,7 +254,7 @@
 
   </section>
   <section class="services section-padding " id="services"
-    style="background-color: #681209;opacity:1;margin: 0 auto; width: 100%;">
+    style="background-color: #da251d;opacity:1;margin: 0 auto; width: 100%;">
     <div class="container  ">
 
       <div class="row ">
@@ -372,7 +372,7 @@
   <!-- contact ends -->
   <!-- footer starts -->
   <footer class="bg-dark p-4" style="padding: 20%;">
-    <div class="container p-2 opacity-70" style="background-color: red; border-radius: 8px;">
+    <div class="container p-2 opacity-70" style="background-color: #da251d; border-radius: 8px;">
       <p class="text-white">Audibel - Rondonópolis-MT- Copyright © 2023 Todos Os Direitos Reservados.</p>
 
       <ul style="display: flex; gap: 8px;">
