--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     style="background-color: #da251d; color:white">
 
     <a id="efeitoHoverLink" class="nav-link" href="#mapa" style="color:#FFF;">
-      <h4 class="bi bi-geo-alt">R. Barão do Rio Branco, 1067 - Ed. Pantanal, sala 03, Rondonópolis-MT</h4>
+      <h4 class="bi bi-geo-alt">Av. João Ponce de Arruda, 2326 - Centro, Rondonópolis-MT</h4>
     </a>
   </nav>
 
@@ -266,7 +266,7 @@
               <h1 class="lead" style=" font-size:35px; color:#494747; font-weight:400">
                 INFORMAÇÕES</h1>
 
-              <span class="bi bi-geo-alt" style="color:#494747; font-size:18px;"> - R. Barão do Rio Branco, 1067-Ed. Pantanal, sala 03
+              <span class="bi bi-geo-alt" style="color:#494747; font-size:18px;"> - Av. João Ponce de Arruda, 2326 - Centro
                 , Rondonópolis - Centro -  MT
               </span>
               <p class="lead" style="font-size: 20px;color:#494747">Horário de Funcionamento:</p>
@@ -292,9 +292,8 @@
         </div>
 
         <div class="col-12 col-md-12 col-lg-6 ">
-
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918020.211678037!2d-59.510061487499975!3d-16.46583249999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9379c923487be499%3A0x784608a900861cdf!2sAudibel%20Aparelhos%20Auditivos!5e0!3m2!1sen!2sbr!4v1687885831762!5m2!1sen!2sbr"
-          width="580" height="200" style="border:0;margin-left: 2%; width: 96%;height: 87%;margin-top: 30px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.2247611932685!2d-54.63258433619049!3d-16.4641529813962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9379c841c2066861%3A0x7be2c274ac59fe6c!2sAv.%20Jo%C3%A3o%20Ponce%20de%20Arruda%2C%202326%20-%20Centro%2C%20Rondon%C3%B3polis%20-%20MT%2C%2078700-260!5e0!3m2!1spt-BR!2sbr!4v1697480949091!5m2!1spt-BR!2sbr" 
+            width="580" height="200" style="border:0;margin-left: 2%; width: 96%;height: 87%;margin-top: 30px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
